<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1.0"
    android:background="#1f1e1d"
    android:baselineAligned="false">

    <GridLayout
        android:orientation="horizontal"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="0.475"
        android:columnCount="2">
        <TextView
            android:id="@+id/left_name"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_columnSpan="2"
            android:layout_rowWeight="1"
            android:gravity="center"
            android:text="Player 1"
            android:textSize="40sp" />
        <TextView
            android:id="@+id/left_score"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_rowWeight="3"
            android:gravity="center"
            android:text="10"
            android:textSize="200sp"
            android:fontFamily="monospace"/>
        <TextView
            android:id="@+id/left_games"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="3"
            android:gravity="center"
            android:text="1"
            android:textSize="80sp"/>
    </GridLayout>
    <GridLayout
        android:id="@+id/middle"
        android:orientation="horizontal"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="0.05"
        android:columnCount="1"
        android:rowCount="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1" />
        <TextView
            android:layout_width="match_parent"
            android:text=":"
            android:gravity="center"
            android:layout_row="1"
            android:layout_rowWeight="4"
            android:textSize="80sp"/>
    </GridLayout>
    <GridLayout
        android:orientation="horizontal"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="0.475"
        android:columnCount="2">
        <TextView
            android:id="@+id/right_name"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_width="match_parent"
            android:layout_columnWeight="1"
            android:layout_columnSpan="2"
            android:layout_rowWeight="1"
            android:gravity="center"
            android:text="Player 2"
            android:textSize="40sp" />
        <TextView
            android:id="@+id/right_games"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="3"
            android:gravity="center"
            android:text="1"
            android:textSize="80sp"/>
        <TextView
            android:id="@+id/right_score"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_rowWeight="3"
            android:gravity="center"
            android:text="10"
            android:textSize="200sp"
            android:fontFamily="monospace"/>
    </GridLayout>
</LinearLayout>