...
                    android:text="@string/appNameLong"
                    android:textStyle="normal"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textColor="@color/primary_light" />
                <Button
                    android:id="@+id/mainUseAsTrackerBtn"
                    android:onClick="onUseAsTracker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radius_background"
                    android:backgroundTint="@android:color/secondary_text_light"
                    android:layout_marginTop="20dp"
...
                    android:text="@string/mainTrackerBtnLabel"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:textColor="#fff"
                    android:textSize="18sp"/>
                <Button
                    android:id="@+id/mainUseAsDisplayBtn"
                    android:onClick="onUseAsDisplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radius_background"
                    android:backgroundTint="@android:color/secondary_text_light"
                    android:elevation="8dp"
...

            <include
                layout="@layout/debug_info"
                android:visibility="invisible" />

            <Button
                android:id="@+id/mainHowToPlay"
                android:onClick="onStartTutorial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/radius_background"
                android:backgroundTint="@android:color/secondary_text_light"
                android:elevation="8dp"
...
