...
        android:rowCount="2">

        <TextView
            android:id="@+id/init_txtMarkTableLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initMarkTableLabel"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/init_txtMarkTableLabelExplanation"
            android:layout_width="match_parent"
...
